<resources>
    <string name="app_name">tip calculator 01</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="number_of_people">Number of people</string>
    <string name="tip_amount">Tip Amount:-</string>
    <string name="total_amount">Total Amount:-</string>
    <string name="tip">Tip%</string>
    <string name="radiobutton">RadioButton</string>
    <string name="_15">15%</string>
    <string name="_35">35%</string>
    <string name="_25">25%</string>
    <string name="calculat">calculat</string>
</resources>